--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -8,8 +8,9 @@ QT_VERSION="v5.15.8-lts-lgpl"
 QT_VERSION_SHORT="5.15.8"
 
 SRC_VOLUME_NAME="${QT_VERSION}-src-volume"
-SDK_VOLUME_NAME="${QT_VERSION}-android-sdk-volume"
-QT5_OPT_VOLUME_NAME="${QT_VERSION}-opt-volume"
+OPT_VOLUME_NAME="${QT_VERSION}-opt-volume"
+#Том данных , чтобы данные могли сохраняться между компиляциями/сборками
+CCACHE_VOLUME="ccache-volume"
 
 TOOLCHAIN_IMAGE_NAME="zanyxdev/qt5-toolchain:${QT_VERSION}" 
 BUILDER_IMAGE_NAME="zanyxdev/qt5-builder:latest" 
@@ -18,5 +19,4 @@ QTCREATOR_URL="https://github.com/qt-creator/qt-creator/releases/download/v15.0.
 CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.31.3/cmake-3.31.3.tar.gz"
 CMDTOOLS_URL="https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip"
 
-#Том данных , чтобы данные могли сохраняться между компиляциями/сборками
-CCACHE_VOLUME="ccache-volume"
+
