--- a/qtcreator_app.env
+++ b/qtcreator_app.env
@@ -16,7 +16,7 @@ TOOLCHAIN_IMAGE_NAME="zanyxdev/qt5-toolchain:${QT_VERSION}"
 BUILDER_IMAGE_NAME="zanyxdev/qt5-builder:latest" 
 QTCREATOR_IMAGE_NAME="zanyxdev/${QT_VERSION_SHORT}-qtcreator:v15.0.0" 
 QTCREATOR_URL="https://github.com/qt-creator/qt-creator/releases/download/v15.0.0/qtcreator-linux-x64-15.0.0.deb"
-CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.31.3/cmake-3.31.3.tar.gz"
+CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.31.4/cmake-3.31.4-linux-x86_64.tar.gz"
 CMDTOOLS_URL="https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip"
 
 
